--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,7 @@
 Ergogen/output/pcbs/fp-info-cache
 Ergogen/output/pcbs/gerber/
 Ergogen/output/pcbs/gerber.zip
+Complete Board v1
+Complete Board v1.1
 Complete Board/
+node_modules/
